--- a/client/src/Components/styles/TopPanel.css
+++ b/client/src/Components/styles/TopPanel.css
@@ -1,8 +1,10 @@
 #top-panel {
     border: 1px solid black;
+    background-image: url("https://i.pinimg.com/originals/39/2f/38/392f38884a695299b0b0a295f5edb1a2.png");
+    background-size: cover;
 }
 
-#top-panel .robot {
+.robot {
     width: 200px;
     height: 200px;
 }
