--- a/client/src/Components/styles/TopPanel.css
+++ b/client/src/Components/styles/TopPanel.css
@@ -1,5 +1,5 @@
 #top-panel {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   background-image: url(../../cartoon-background.jpg);
   background-position: center;
   background-size: cover;
