--- a/client/src/Components/styles/BottomPanel.css
+++ b/client/src/Components/styles/BottomPanel.css
@@ -1,5 +1,6 @@
 #bottom-panel {
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  background-color: #fff;
 }
 
 #bottom-panel-label {
