Improve styling of bottom panel icons

--- a/client/src/Components/styles/BottomPanel.css
+++ b/client/src/Components/styles/BottomPanel.css
@@ -4,18 +4,23 @@
 }
 
 #bottom-panel-label {
-  background-color: #D3FFEA;
+  background-color: #d3ffea;
   text-align: center;
 }
 
 #bottom-toolbar {
   display: flex;
   flex-direction: column;
+  margin: 20px;
 }
 
 .empty-space {
   width: 200px;
   height: 200px;
+}
+
+.bottom-toolbar-icon {
+  padding: 10px;
 }
 
 .bottom-toolbar-icon:hover {
